--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,13 +17,17 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+#background = #0d1117
+background = #0c052c
+
+background-alt = #2f363d
+foreground = #d0d7de
+primary = #D29922
+secondary = #539bf5
+alert = #D29922
+disabled = #4e5b55
+border = #0f2923
+
 
 [bar/example]
 width = 100%
@@ -40,28 +44,29 @@ line-size = 3pt
 border-size = 4pt
 border-color = #00000000
 
-padding-left = 0
-padding-right = 1
+padding-left = 2
+padding-right = 2
 
 module-margin = 1
 
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+#font-0 = JetBrainsMono Nerd Font:size=12.5:weight=medium;3
+font-0 = Roboto Mono Nerd Font:size=12.5:weight=medium;3
+font-1 = FontAwesome:size=12;3
+font-2 = Hack Nerd Font:size=12;3 
 
-modules-left = xworkspaces xwindow
-modules-right = pulseaudio memory cpu battery wlan date tray
+modules-left = memory cpu filesystem battery backlight pulseaudio
+modules-center = xworkspaces
+modules-right = wlan lock tray date hour 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-
-
 tray-position = right
-tray-max = 16
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -69,77 +74,13 @@ tray-max = 16
 
 ; override-redirect = true
 
-[module/xworkspaces]
-type = internal/xworkspaces
-
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
+[module/backlight]
+type = internal/xbacklight
+enable-scroll = false
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-label = %percentage:2%%
-format-prefix-foreground = ${colors.primary}
+format = <label>
+label = %percentage%%
 
 [module/battery]
 type = internal/battery
@@ -179,15 +120,19 @@ time-format = %H:%M
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-charging>
-
-format-charging = BAT<label-charging>
+format-charging-font = 2
+format-charging-prefix = " "
+format-charging-prefix-foreground = ${colors.primary}
+frormat-charging = <label-charging>
 ; Available tags:
 ;   <label-discharging> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
-
-format-discharging = BAT<label-discharging>
+format-discharging-font = 2
+format-discharging-prefix = " "
+format-discharging-prefix-foreground = ${colors.primary}
+format-discharging = <label-discharging>
 
 ; Available tags:
 ;   <label-full> (default)
@@ -210,14 +155,15 @@ format-low = <label-low> <animation-low>
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
-label-charging = >%percentage%%
+label-charging = "%{A1:xfce4-terminal -e btop:} > %percentage%%{A} %"
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-label-discharging = <%percentage%%
+label-discharging = "%{A1:xfce4-terminal -e btop:} < %percentage%%{A} %"
+
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
@@ -265,6 +211,84 @@ animation-low-0 = !
 animation-low-1 = 
 animation-low-framerate = 200
 
+[module/xworkspaces]
+type = internal/xworkspaces
+
+label-active = %name%
+label-active-background = ${colors.background-alt}
+label-active-underline= ${colors.primary}
+label-active-padding = 1
+
+label-occupied = %name%
+label-occupied-padding = 1
+
+label-urgent = %name%
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 1
+
+label-empty = 
+label-empty-foreground = ${colors.disabled}
+label-empty-padding = 0
+
+[module/xwindow]
+type = internal/xwindow
+label = %title:0:75:...%
+
+[module/filesystem]
+type = internal/fs
+interval = 25
+
+mount-0 = /
+format-mounted-prefix = " "
+format-mounted-prefix-foreground = ${colors.primary}
+format-mounted = <label-mounted>
+label-mounted = "%{A1:xfce4-terminal -e btop:} %percentage_used%%{A} %"
+
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.disabled}
+
+[module/pulseaudio]
+type = internal/pulseaudio
+format-font = 2
+format-volume-prefix = " "
+format-volume-prefix-foreground = ${colors.primary}
+format-volume = <label-volume>
+
+label-volume = %percentage%%
+
+label-muted = muted
+label-muted-foreground = ${colors.disabled}
+
+
+[module/lock]
+type = internal/xkeyboard
+;ignore :
+format-margin = 2
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+format = <label-indicator>
+label-indicator-padding = 1
+indicator-icon-0 = caps lock;-CL;+CL
+label-indicator-off =
+label-indicator-on = "  Caps "
+format-foreground = ${colors.background}
+format-background = ${colors.alert}
+
+[module/memory]
+type = internal/memory
+interval = 2
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
+label = "%{A1:xfce4-terminal -e btop:} %percentage_used:2%%{A} %"
+
+
+[module/cpu]
+type = internal/cpu
+interval = 2
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
+label = "%{A1:xfce4-terminal -e btop:} %percentage:2%%{A} %"
+
 [network-base]
 type = internal/network
 interval = 5
@@ -275,22 +299,43 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F-} %essid% %local_ip%
+format-connected-prefix = " "
+format-connected-prefix-foreground = ${colors.primary}
+formate-connected = <label-connected>
+label-connected = %essid% %local_ip%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
-[module/date]
+;;;;;;;;;;;;;;;; CENTER MODULES ;;;;;;;;;;;;;;;;
+
+[module/hour]
 type = internal/date
-interval = 1
-
+interval = 5
+label-foreground = ${colors.foreground}
 date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
 label = %date%
-label-foreground = ${colors.primary}
+label-padding = 0
+label-font = 1
+
+[module/date]
+type = custom/script
+interval = 5
+label-foreground = ${colors.disabled}
+format = <label>
+;exec = "LC_TIME="de_de_utf8" date +"%a, %b %-d""
+exec = "date +"%a, %-d. %b %Y""
+
+label-padding = 0
+label-font = 1
+click-left = flatpak run eu.betterbird.Betterbird -calendar
+
+[module/tray]
+type = internal/tray
+tray-spacing = 4px
+
 
 [settings]
 screenchange-reload = true
