--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -155,14 +155,14 @@ format-low = <label-low> <animation-low>
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
-label-charging = "%{A1:xfce4-terminal -e btop:} > %percentage%%{A} %"
+label-charging = "%{A1:kitty -e btop:} > %percentage%%{A} %"
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-label-discharging = "%{A1:xfce4-terminal -e btop:} < %percentage%%{A} %"
+label-discharging = "%{A1:kitty -e btop:} < %percentage%%{A} %"
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
@@ -242,7 +242,7 @@ mount-0 = /
 format-mounted-prefix = " "
 format-mounted-prefix-foreground = ${colors.primary}
 format-mounted = <label-mounted>
-label-mounted = "%{A1:xfce4-terminal -e btop:} %percentage_used%%{A} %"
+label-mounted = "%{A1:kitty -e btop:} %percentage_used%%{A} %"
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -279,7 +279,7 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
-label = "%{A1:xfce4-terminal -e btop:} %percentage_used:2%%{A} %"
+label = "%{A1:kitty -e btop:} %percentage_used:2%%{A} %"
 
 
 [module/cpu]
@@ -287,7 +287,7 @@ type = internal/cpu
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
-label = "%{A1:xfce4-terminal -e btop:} %percentage:2%%{A} %"
+label = "%{A1:kitty -e btop:} %percentage:2%%{A} %"
 
 [network-base]
 type = internal/network
